force-app/main/default/objects/Advisory_Planning__c/Advisory_Planning__c.object-meta.xml
<CustomObject>
    <label>Advisory Planning</label>
    <nameField>
        <displayFormat>AD-{000000}</displayFormat>
        <label>Advisory Planning ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advisory Plannings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>