force-app/main/default/objects/Advisory_Planning__c/fields/Advisory_Planning_Name__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Planning_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Advisory Planning Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>