force-app/main/default/objects/Advisory_Planning__c/fields/Baseline_Advisory_Planning_Date__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Advisory_Planning_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Baseline Advisory Planning Date</label>
    <type>Date</type>
</CustomField>