force-app/main/default/objects/Advisory_Planning__c/fields/Cancel_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancel Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>