force-app/main/default/objects/Advisory_Planning__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Advisory Plannings</relationshipLabel>
    <relationshipName>Advisory_Plannings</relationshipName>
    <type>Lookup</type>
</CustomField>