force-app/main/default/objects/Advisory_Planning__c/fields/Expense_Objective__c.field-meta.xml
<CustomField>
    <fullName>Expense_Objective__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expense Objective</label>
    <length>255</length>
    <type>Text</type>
</CustomField>