force-app/main/default/objects/Advisory_Planning__c/fields/Is_Sync_Product_Holding__c.field-meta.xml
<CustomField>
    <fullName>Is_Sync_Product_Holding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To indicate that this advisory planning already be sync to get the current product holding.</description>
    <label>IsSyncProductHolding</label>
    <type>Checkbox</type>
</CustomField>