force-app/main/default/objects/Advisory_Planning__c/fields/Return_Objective__c.field-meta.xml
<CustomField>
    <fullName>Return_Objective__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Return Objective</label>
    <length>255</length>
    <type>Text</type>
</CustomField>