force-app/main/default/objects/Advisory_Planning__c/fields/Solution_for_Risk__c.field-meta.xml
<CustomField>
    <fullName>Solution_for_Risk__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Solution for Risk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>