force-app/main/default/objects/Advisory_Planning__c/fields/Sum_Insured_Required__c.field-meta.xml
<CustomField>
    <fullName>Sum_Insured_Required__c</fullName>
    <label>Sum Insured Required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>