force-app/main/default/objects/Advisory_Planning__c/fields/Target_Advisory_Planning_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Advisory_Planning_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Target Advisory Planning Date</label>
    <type>Date</type>
</CustomField>