force-app/main/default/objects/Advisory_Planning__c/fields/ttb_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>ttb_Customer_ID__c</fullName>
    <description>ttb customer unique ID from the CSV screen.</description>
    <formula>Customer__r.TMB_Customer_ID_PE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ttb Customer ID</label>
    <type>Text</type>
</CustomField>