force-app/main/default/objects/Advisory_Planning__c/validationRules/Error_CancelWithoutReason.validationRule-meta.xml
<ValidationRule>
    <fullName>Error_CancelWithoutReason</fullName>
    <active>true</active>
    <description>Validate error message when error without any reason.</description>
    <errorConditionFormula>ISCHANGED(Status__c) &amp;&amp; 
TEXT(Status__c) == &apos;Cancelled&apos; &amp;&amp;
ISBLANK(Cancel_Reason__c)</errorConditionFormula>
    <errorDisplayField>Cancel_Reason__c</errorDisplayField>
    <errorMessage>Please specify the cancellation reason.</errorMessage>
</ValidationRule>