force-app/main/default/objects/Advisory_Planning__c/validationRules/Only_owner_can_update_advisory_planning.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_owner_can_update_advisory_planning</fullName>
    <active>true</active>
    <errorConditionFormula>( $Profile.Name != &apos;Retail Integration API Only&apos;)
&amp;&amp;
NOT(CONTAINS( $Profile.Name,&apos;Admin&apos;))
&amp;&amp;
$User.Id &lt;&gt;  Customer__r.RTL_Wealth_RM__c</errorConditionFormula>
    <errorMessage>Only RM Owner can create or update advisory planning of the customer.</errorMessage>
</ValidationRule>